--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Tammy's Child Care Services <em>by HTML5 UP</em></a></h1>
+						<h1><a href="index.html" id="logo">Tammy's Child Care Services</a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -56,12 +56,12 @@
 				</div>
 
 			<!-- Banner -->
-				<section id="banner">
+				<!--<section id="banner">
 					<header>
-						<h2>Arcana: <em>A responsive site template freebie by <a href="http://html5up.net">HTML5 UP</a></em></h2>
+						 <h2>Arcana: <em>A responsive site template freebie by <a href="http://html5up.net">HTML5 UP</a></em></h2> 
 						<a href="#" class="button">Learn More</a>
 					</header>
-				</section>
+				</section>-->
 
 			<!-- Highlights -->
 				<section class="wrapper style1">
