--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Back to Top of Page</a></h1>
+						<h1><a href="index.html">Back to Top</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -31,8 +31,8 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="generic.html">Generic</a></li>
 											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<!--<li><a href="#">Sign Up</a></li>
+											<li><a href="#">Log In</a></li> -->
 										</ul>
 									</div>
 								</li>
@@ -44,7 +44,7 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Tammy's Child Care Services</h2>
-							<p>Another fine responsive<br />
+							<p>Professional, Licensed Child Care Provider<br />
 							site template freebie<br />
 							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
 							<ul class="actions">
