--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 -->
 <html>
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109425267-1"></script>
+		<script>
+  			window.dataLayer = window.dataLayer || [];
+  			function gtag(){dataLayer.push(arguments);}
+  			gtag('js', new Date());
+
+  			gtag('config', 'UA-109425267-1');
+		</script>
+
 		<title>Tammy's Child Care</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -21,7 +31,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Back to Top</a></h1>
+						<h1><a href="index.html">Home</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -45,11 +55,9 @@
 						<div class="inner">
 							<h2>Tammy's Child Care Services</h2>
 							<p>Professional, Licensed Child Care Provider<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
-							<ul class="actions">
-								<li><a href="#" class="button special">Activate</a></li>
-							</ul>
+							   test text<br />
+							   test<br />
+							   </p>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
@@ -58,10 +66,9 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Contact Me!</h2>
+								<p>Phone Number: (415) 283-6477<br />
+								   E-mail: tammy94112@yahoo.com</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
