Updated personal info

--- a/index.html
+++ b/index.html
@@ -82,9 +82,12 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Location</h2>
+								<p>Tammy Ho Child Care<br />
+								   1911 San Jose Ave, San Francisco, California, 94112<br />
+								   <br />
+								   Tammy's Child Care Services is located convienently close to I-280. There is <br />
+								   plenty of street parking available in the area.</p>
 							</div>
 						</section>
 						<section class="spotlight">
