--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 								<p>Tammy Ho Child Care<br />
 								   1911 San Jose Ave, San Francisco, California, 94112<br />
 								   <br />
-								   Tammy's Child Care Services is located convienently close to I-280. There is <br />
+								   Tammy's Child Care Services is located convienently close to I-280. There is
 								   plenty of street parking available in the area.</p>
 							</div>
 						</section>
