--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
 								<h2>Location</h2>
 								<p>Tammy Ho Child Care<br />
-								   1911 San Jose Ave, San Francisco, California, 94112<br />
+								   1911 San Jose Ave<br />
+								   San Francisco, California, 94112<br />
 								   <br />
 								   Tammy's Child Care Services is located convienently close to I-280. There is
 								   plenty of street parking available in the area.</p>
