--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/pic01.png" alt="" /></div><div class="content">
 								<h2>Location</h2>
 								<p>Tammy Ho Child Care<br />
 								   1911 San Jose Ave<br />
